force-app/main/default/objects/Account/fields/Accessories_Allowed_on_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Allowed_on_Subsidy__c</fullName>
    <description>Indicates whether the employee is allowed to purchase accessories on a Subsidy. 
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates whether the employee is allowed to purchase accessories on a subsidy. Sent to Salesforce by IA.</inlineHelpText>
    <label>Accessories Allowed on Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>