force-app/main/default/objects/Account/fields/Accessory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Notes__c</fullName>
    <description>Additional information regarding accessories 
Field Type: IA 
Integrated: N</description>
    <inlineHelpText>Additional Information regarding accessories.This data is only in salesforce.</inlineHelpText>
    <label>Accessory Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>