force-app/main/default/objects/Account/fields/Account_Alert__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert__c</fullName>
    <description>Account Alert Flag (red flag image).The purpose is to enable Customer Service to quickly know that there is a customer issue (when a call comes in) and they will need to check the notes to see what is going on with this account.
Field Type: GBL
Integrated: N</description>
    <formula>if(
 Account_Alert_Active__c  = true, IMAGE( &quot;/img/samples/flag_yellow.gif&quot;, &quot;Red Flag&quot;, 20, 20), null
)</formula>
    <inlineHelpText>Flag to alert Customer Service to a potential customer issue. Check the account alert notes to see what is going on with this account.</inlineHelpText>
    <label>Account Alert</label>
    <type>Text</type>
</CustomField>