force-app/main/default/objects/Account/fields/Account_Alert_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert_Notes__c</fullName>
    <description>If the Account Alert flag is displayed, this field contains the notes explaining the customer issue.
Field Type: GBL
Integrated: N</description>
    <inlineHelpText>Describes the customer issue that triggered the Account Alert (up to 255 characters)</inlineHelpText>
    <label>Account Alert Notes</label>
    <type>TextArea</type>
</CustomField>