force-app/main/default/objects/Account/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <description>Another name for the account
Field Type: GBL
Integrated: N</description>
    <inlineHelpText>This is another name for the Account that differs from the Account Name or is shorter to assist in Global searches and Mobile Phone searches.</inlineHelpText>
    <label>Account Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>