force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>Sample IA 2.0
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Sample IA 2.0
Field Type: IA
Integrated: Y</inlineHelpText>
    <label>Obsolete Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>