force-app/main/default/objects/Account/fields/Account_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Credit Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>