force-app/main/default/objects/Account/fields/Account_Number_BPC__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_BPC__c</fullName>
    <formula>IF(  ISBLANK(AccountNumber) ,  Account_Number_Helper__c , AccountNumber  )</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>