force-app/main/default/objects/Account/fields/Account_Number_Helper__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Helper__c</fullName>
    <description>This auto number is automatically generated for all new accounts</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Account Number Helper</label>
    <type>AutoNumber</type>
</CustomField>