force-app/main/default/objects/Account/fields/Account_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Text__c</fullName>
    <label>Account Number (Text)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>