force-app/main/default/objects/Account/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>Account Owner user record email address</description>
    <formula>Owner.Email</formula>
    <inlineHelpText>Account Owner user record email address</inlineHelpText>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>