force-app/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>References Account Owner First and Last Name for the RWfB Community Duplicate Account modal.</description>
    <formula>IF( ISBLANK(Owner.FirstName), Owner.LastName, Owner.FirstName  + &quot; &quot; + Owner.LastName)</formula>
    <inlineHelpText>References Account Owner First and Last Name for the RWfB Community Duplicate Account modal.</inlineHelpText>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>