force-app/main/default/objects/Account/fields/Account_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Phone__c</fullName>
    <description>This field is being used to reference the Account Owner Phone for the RWfB Community Duplicate Modal content</description>
    <formula>Owner.Phone</formula>
    <inlineHelpText>This field is being used to reference the Account Owner Phone for the RWfB Community Duplicate Modal content</inlineHelpText>
    <label>Account Owner Phone</label>
    <type>Text</type>
</CustomField>