force-app/main/default/objects/Account/fields/Account_Region_Director__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region director role on the account team</description>
    <inlineHelpText>Region director role on the account team</inlineHelpText>
    <label>Account Region Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Directing_Region_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>