force-app/main/default/objects/Account/fields/Account_Retail_Acctg_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Account_Retail_Acctg_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Retail Acctg Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retail_Acct_Specialist_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>