force-app/main/default/objects/Account/fields/Account_ROM__c.field-meta.xml
<CustomField>
    <fullName>Account_ROM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ROM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retail_Ops_Manager_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>