force-app/main/default/objects/Account/fields/Account_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Safe_ID__c</fullName>
    <description>This is the 18 digit salesforce safe id. Hidden on all page layouts. 
Used in the Industrial Account Document Upload.
Field Type: GBL
Integrated: Y</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the 18 digit salesforce safe id. Hidden on all page layouts.</inlineHelpText>
    <label>Account Safe ID</label>
    <type>Text</type>
</CustomField>