force-app/main/default/objects/Account/fields/Account_Shared_With__c.field-meta.xml
<CustomField>
    <fullName>Account_Shared_With__c</fullName>
    <description>Field is used to capture who this account should be shared with</description>
    <inlineHelpText>Who the account is shared with if the indicator is True</inlineHelpText>
    <label>Account Shared With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>