force-app/main/default/objects/Account/fields/Account_Team_ISM__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_ISM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the ISM Account Team Role User, populated via trigger.</description>
    <label>Account Team ISM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_Industrial_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>