force-app/main/default/objects/Account/fields/Account_TSM__c.field-meta.xml
<CustomField>
    <fullName>Account_TSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account TSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Rep_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>