force-app/main/default/objects/Account/fields/AccountIsHidden__c.field-meta.xml
<CustomField>
    <fullName>AccountIsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates that the account has been hidden from view</description>
    <label>AccountIsHidden</label>
    <type>Checkbox</type>
</CustomField>