force-app/main/default/objects/Account/fields/AccountIsShared__c.field-meta.xml
<CustomField>
    <fullName>AccountIsShared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that a wholesale account is being shared between 2 or more individuals as indicated</description>
    <inlineHelpText>This indicates that a wholesale account is being shared between 2 or more individuals as indicated</inlineHelpText>
    <label>AccountIsShared</label>
    <type>Checkbox</type>
</CustomField>