force-app/main/default/objects/Account/fields/AccountROMName__c.field-meta.xml
<CustomField>
    <fullName>AccountROMName__c</fullName>
    <description>Actual ROM Name (not ID) for Reports</description>
    <formula>Account_ROM__r.FirstName  &amp; &quot; &quot;  &amp;  Account_ROM__r.LastName</formula>
    <inlineHelpText>ROM Name for Reports</inlineHelpText>
    <label>Account ROM Name</label>
    <type>Text</type>
</CustomField>