force-app/main/default/objects/Account/fields/Acct_Based_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Acct_Based_Mktg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Based Marketing Indicator</description>
    <inlineHelpText>Account Based Marketing Indicator.  Maintained by Sales Enablement and Marketing</inlineHelpText>
    <label>Acct Based Mktg(ABM)</label>
    <type>Checkbox</type>
</CustomField>