force-app/main/default/objects/Account/fields/Acct_Validation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Acct_Validation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account validation steps have been completed</description>
    <inlineHelpText>Account validation steps are complete</inlineHelpText>
    <label>Acct Validation Complete</label>
    <type>Checkbox</type>
</CustomField>