force-app/main/default/objects/Account/fields/Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Details__c</fullName>
    <description>This field stores any action details related to action taken on the store layout . 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Details of the action taken regarding the store layout. .</inlineHelpText>
    <label>Action Details</label>
    <length>254</length>
    <type>Text</type>
</CustomField>