force-app/main/default/objects/Account/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Brief description of action taken regarding the store layout. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Brief description of action taken regarding the store layout. Details are in the Action Details field.

Responsible Owner: Store Development</inlineHelpText>
    <label>Obsolete Action Taken</label>
    <length>32</length>
    <type>Text</type>
</CustomField>