force-app/main/default/objects/Account/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Activation Date for an IA Account. (Set by Workflow)</description>
    <inlineHelpText>Activation Date for an IA Account  (Set by Workflow)</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>