force-app/main/default/objects/Account/fields/Active_Store__c.field-meta.xml
<CustomField>
    <fullName>Active_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the store is active in Xstore. The store may be inactive in M3. 
Used in the integration to Xstore.
Field Type: Store Data
Integrated: Y - SF&gt;Xstore.</description>
    <inlineHelpText>Used in the integration out to Xstore.  This can be different from the Account status.

Responsible Owner: Store Operations</inlineHelpText>
    <label>Active Store</label>
    <type>Checkbox</type>
</CustomField>