force-app/main/default/objects/Account/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field Type: Busdev
Integrated :N</description>
    <label>Additional Info</label>
    <type>Checkbox</type>
</CustomField>