force-app/main/default/objects/Account/fields/Aging_Status__c.field-meta.xml
<CustomField>
    <fullName>Aging_Status__c</fullName>
    <description>The status of Accounts Receivable aging 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>Future Integration</inlineHelpText>
    <label>Aging Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Due/Current</fullName>
            </value>
            <value>
                <fullName>1-30 Days Past Due</fullName>
            </value>
            <value>
                <fullName>31-60 Days Past Due</fullName>
            </value>
            <value>
                <fullName>61-90 Days Past Due</fullName>
            </value>
            <value>
                <fullName>Over 90 Days Past Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>