force-app/main/default/objects/Account/fields/Alarm_Type__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Type__c</fullName>
    <description>This shoes the alarm type. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is the type of security alarm the store has.

Responsible Owner: Dealer Operations</inlineHelpText>
    <label>Alarm Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>