force-app/main/default/objects/Account/fields/Anticipated_Segment__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Segment__c</fullName>
    <description>Initial Anticipated Segment for the Account for comparison to Segment based on Actual Sales</description>
    <inlineHelpText>Initial Anticipated Segment for the Account for comparison to Segment based on Actual Sales</inlineHelpText>
    <label>Anticipated Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>S4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>