force-app/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Updated automatically in the New Account Approval process.
Field Type: GBL
Integrated: N
New Account process has not deployed and approval process is not in use.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <color>#78C953</color>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>In Vendor Compliance</fullName>
                <color>#E27001</color>
                <label>In Vendor Compliance</label>
            </value>
            <value>
                <fullName>In Credit</fullName>
                <color>#A845DC</color>
                <label>In Credit</label>
            </value>
            <value>
                <fullName>Scheduled for M3</fullName>
                <color>#F3D904</color>
                <label>Scheduled for M3</label>
            </value>
            <value>
                <fullName>Added to M3</fullName>
                <color>#A53711</color>
                <label>Added to M3</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#66E9BD</color>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#0B24BE</color>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>