force-app/main/default/objects/Account/fields/Approved_for_CC__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_CC__c</fullName>
    <description>MSTS has approved this account to pay by credit card. MSTS owns this field and sends it to us via API.</description>
    <inlineHelpText>MSTS has approved this account to pay by credit card.</inlineHelpText>
    <label>Approved for Credit Card Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>