force-app/main/default/objects/Account/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <description>Who broker is assigned to.
Field Type: Busdev
Integrated :N</description>
    <inlineHelpText>Who broker is assigned to.</inlineHelpText>
    <label>Assigned</label>
    <length>30</length>
    <type>Text</type>
</CustomField>