force-app/main/default/objects/Account/fields/Authorization_Form_Created__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Authorization Form has been created 
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates the Authorization Form has been created. Data is only in Salesforce.</inlineHelpText>
    <label>Authorization Form Created</label>
    <type>Checkbox</type>
</CustomField>