force-app/main/default/objects/Account/fields/Authorization_Form_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Authorization Form indicator in IA 
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Authorization Form indicator in IA. Sent to Salesforce by IA.</inlineHelpText>
    <label>Obsolete IA Authorization Form Indicator</label>
    <type>Checkbox</type>
</CustomField>