force-app/main/default/objects/Account/fields/Backorders_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Backorders_Allowed__c</fullName>
    <description>Indicates whether this customer will accept backorders</description>
    <inlineHelpText>This field indicates whether the customer will accept backorders</inlineHelpText>
    <label>Backorders Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>