force-app/main/default/objects/Account/fields/Backorders_Allowed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Backorders_Allowed_Notes__c</fullName>
    <description>Additional information regarding the Backorder handling for this account
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field is used to provide information about backorders for this customer</inlineHelpText>
    <label>Backorders Allowed Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>