force-app/main/default/objects/Account/fields/BAS_Activation_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>BAS_Activation_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the BAS assigned to the account has completed their pre-activation review of the account.</description>
    <inlineHelpText>Indicates that the BAS assigned to the account has completed their pre-activation review of the account.</inlineHelpText>
    <label>BAS Activation Review Complete</label>
    <type>Checkbox</type>
</CustomField>