force-app/main/default/objects/Account/fields/Bill_Parent__c.field-meta.xml
<CustomField>
    <fullName>Bill_Parent__c</fullName>
    <description>The parent company gets a copy of the bill</description>
    <inlineHelpText>The parent company gets a copy of the bill</inlineHelpText>
    <label>Bill Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>