force-app/main/default/objects/Account/fields/Bill_To_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Country_Code__c</fullName>
    <description>Integrated with M3; not currently used (e.g. does not lookup to Country Code) but included in the integration and orchestration in case it&apos;s needed in the future (e.g. reporting purposes)</description>
    <label>Bill To Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>