force-app/main/default/objects/Account/fields/Billing_Addr_used_for_Physical_Addr__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addr_used_for_Physical_Addr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Billing Address was used to populate Physical Address because there was no Physical Address available upon conversion</description>
    <inlineHelpText>Indicates that a Billing Address was used to populate Physical Address because there was no Physical Address available upon conversion</inlineHelpText>
    <label>Billing Addr used for Physical Addr</label>
    <type>Checkbox</type>
</CustomField>