force-app/main/default/objects/Account/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Billing Contact. Currently hidden on all page layouts, except System Admin and Master.</description>
    <label>Obsolete Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
    <relationshipName>BillingContact</relationshipName>
    <type>Lookup</type>
</CustomField>