force-app/main/default/objects/Account/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <label>Billing Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>