force-app/main/default/objects/Account/fields/Billing_Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mailing_City__c</fullName>
    <label>Billing Contact Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>