force-app/main/default/objects/Account/fields/Billing_Contact_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mailing_County__c</fullName>
    <label>Billing Contact Mailing County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>