force-app/main/default/objects/Account/fields/Billing_Contact_Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mailing_State_Province__c</fullName>
    <label>Billing Contact Mailing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>