force-app/main/default/objects/Account/fields/Billing_Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mailing_Street__c</fullName>
    <label>Billing Contact Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>