force-app/main/default/objects/Account/fields/Billing_Contact_Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mailing_Zip_Postal_Code__c</fullName>
    <label>Billing Contact Mailing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>