force-app/main/default/objects/Account/fields/Billing_Contact_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone_Extension__c</fullName>
    <description>Billing Contact Phone Extension</description>
    <inlineHelpText>Billing Contact Phone Extension</inlineHelpText>
    <label>Billing Contact Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>