force-app/main/default/objects/Account/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Salesforce/MSTS Field</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>