force-app/main/default/objects/Account/fields/BillingContactID__c.field-meta.xml
<CustomField>
    <fullName>BillingContactID__c</fullName>
    <label>BillingContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>