force-app/main/default/objects/Account/fields/BPC_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>BPC_Payment_Terms__c</fullName>
    <description>Integration : Y</description>
    <inlineHelpText>Any term over 30 days will result in additional cost per transaction.</inlineHelpText>
    <label>RWBAA Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>Net 30 Days</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Net 45 Days</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>Net 60 Days</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>Net 75 Days</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Net 90 Days</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>Net 120 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>