force-app/main/default/objects/Account/fields/Brand_Notes__c.field-meta.xml
<CustomField>
    <fullName>Brand_Notes__c</fullName>
    <description>Brand Notes for Industrial Accounts - used to make a note about brand information related to the account
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Notes regarding Brands related to the account. Data is only in Salesforce.</inlineHelpText>
    <label>Brand Notes</label>
    <type>TextArea</type>
</CustomField>