force-app/main/default/objects/Account/fields/Brands_Customer_Buys__c.field-meta.xml
<CustomField>
    <fullName>Brands_Customer_Buys__c</fullName>
    <description>do not use; list is old</description>
    <label>Obsolete Brands Customer Buys</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter</fullName>
            </value>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>Red Wing Garments</fullName>
            </value>
            <value>
                <fullName>Red Wing Lifestyle</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>