force-app/main/default/objects/Account/fields/BTB_Account__c.field-meta.xml
<CustomField>
    <fullName>BTB_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an account that the B2B team manages</description>
    <inlineHelpText>Is this an account that the B2B team manages</inlineHelpText>
    <label>BTB Account</label>
    <type>Checkbox</type>
</CustomField>