force-app/main/default/objects/Account/fields/Buxton_Score__c.field-meta.xml
<CustomField>
    <fullName>Buxton_Score__c</fullName>
    <label>Buxton Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>