force-app/main/default/objects/Account/fields/Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group__c</fullName>
    <description>Need this field because it is in the xml, but no value is passed and it is not on page layouts
Field Type: M3
Integrated: Y</description>
    <label>Buying Group from M3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>